@@ -10,9 +10,15 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 
+import org.springframework.context.ApplicationEventPublisher;
+import com.fpt.sccw.dto.response.NotificationEventDTO;
 import java.util.*;
-import java.util.stream.Collectors;
+import com.fpt.sccw.dto.response.PageResponse;
 
 @RestController
 @RequestMapping("/api/stocktake")
@@ -25,38 +31,43 @@ public class InventoryCheckController {
     private final WarehouseRepository warehouseRepository;
     private final ProductRepository productRepository;
     private final InventoryRepository inventoryRepository;
+    private final ApprovalHistoryRepository approvalHistoryRepository;
+    private final ApplicationEventPublisher eventPublisher;
 
     // ------------------------------------------------------------------
     // GET /api/stocktake  — Danh sách phiếu kiểm kê (filter theo role)
     // ------------------------------------------------------------------
     @GetMapping
     @Transactional(readOnly = true)
-    public ResponseEntity<List<InventoryCheckDTO>> getAllChecks(
-            @RequestParam(required = false) Long warehouseIdParam) {
+    public ResponseEntity<PageResponse<InventoryCheckDTO>> getAllChecks(
+            @RequestParam(required = false) Long warehouseIdParam,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "20") int size) {
 
         User user = getAuthenticatedUser();
         if (user == null) return ResponseEntity.status(401).build();
+        if (page < 0 || size < 1 || size > 100) return ResponseEntity.badRequest().build();
 
+        Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "createdAt"));
         String role = user.getRole().getRoleName().name();
-        List<InventoryCheck> checks;
+        Page<InventoryCheck> checks;
 
         if (role.equals("ADMIN") || role.equals("MANAGER")) {
-            // Admin/Manager xem tất cả hoặc filter theo kho
             checks = warehouseIdParam != null
-                    ? inventoryCheckRepository.findByWarehouseId(warehouseIdParam)
-                    : inventoryCheckRepository.findAll();
+                    ? inventoryCheckRepository.findByWarehouseId(warehouseIdParam, pageable)
+                    : inventoryCheckRepository.findAll(pageable);
         } else {
-            // Warehouse_Manager và Staff chỉ xem kho của mình
             Long warehouseId = user.getWarehouse() != null ? user.getWarehouse().getId() : null;
-            if (warehouseId == null) return ResponseEntity.ok(List.of());
-            checks = inventoryCheckRepository.findByWarehouseId(warehouseId);
+            checks = warehouseId == null
+                    ? Page.empty(pageable)
+                    : inventoryCheckRepository.findByWarehouseId(warehouseId, pageable);
         }
 
-        List<InventoryCheckDTO> result = checks.stream()
+        List<InventoryCheckDTO> result = checks.getContent().stream()
                 .map(InventoryCheckDTO::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
 
-        return ResponseEntity.ok(result);
+        return ResponseEntity.ok(new PageResponse<>(result, checks));
     }
 
     // ------------------------------------------------------------------
@@ -145,6 +156,28 @@ public class InventoryCheckController {
             }
 
             InventoryCheck saved = inventoryCheckRepository.save(check);
+
+            ApprovalHistory history = ApprovalHistory.builder()
+                    .inventoryCheck(saved)
+                    .documentType(Status.DocumentType.INVENTORY_CHECK)
+                    .newStatus(saved.getStatus().name())
+                    .note("Stocktake sheet created")
+                    .approver(user)
+                    .build();
+            approvalHistoryRepository.save(history);
+
+            if (assignedUser != null) {
+                NotificationEventDTO event = NotificationEventDTO.builder()
+                        .id(java.util.UUID.randomUUID().toString())
+                        .userId(assignedUser.getId().toString())
+                        .title("New Inventory Check")
+                        .message("You have been assigned to inventory check #" + saved.getId())
+                        .type("INFO")
+                        .createdAt(java.time.Instant.now().toString())
+                        .build();
+                eventPublisher.publishEvent(event);
+            }
+
             return ResponseEntity.ok(InventoryCheckDTO.fromEntity(saved));
         } catch (Exception e) {
             e.printStackTrace();
@@ -196,11 +229,39 @@ public class InventoryCheckController {
         }
 
         // Tự động chuyển sang IN_PROGRESS khi bắt đầu đếm
+        boolean statusChanged = false;
+        String oldStatus = check.getStatus().name();
         if (check.getStatus() == Status.InventoryCheckStatus.PENDING) {
             check.setStatus(Status.InventoryCheckStatus.IN_PROGRESS);
+            statusChanged = true;
         }
 
         InventoryCheck saved = inventoryCheckRepository.save(check);
+
+        if (statusChanged) {
+            ApprovalHistory history = ApprovalHistory.builder()
+                    .inventoryCheck(saved)
+                    .documentType(Status.DocumentType.INVENTORY_CHECK)
+                    .oldStatus(oldStatus)
+                    .newStatus(saved.getStatus().name())
+                    .note("Started counting")
+                    .approver(user)
+                    .build();
+            approvalHistoryRepository.save(history);
+
+            if (check.getUser() != null) {
+                NotificationEventDTO event = NotificationEventDTO.builder()
+                        .id(java.util.UUID.randomUUID().toString())
+                        .userId(check.getUser().getId().toString())
+                        .title("Inventory Check Started")
+                        .message("Staff " + user.getUsername() + " started counting for check #" + saved.getId())
+                        .type("INFO")
+                        .createdAt(java.time.Instant.now().toString())
+                        .build();
+                eventPublisher.publishEvent(event);
+            }
+        }
+
         return ResponseEntity.ok(InventoryCheckDTO.fromEntity(saved));
     }
 
@@ -230,6 +291,7 @@ public class InventoryCheckController {
         InventoryCheck check = inventoryCheckRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Stocktake not found: " + id));
 
+        String oldStatusStr = check.getStatus().name();
         try {
             check.setStatus(Status.InventoryCheckStatus.valueOf(newStatus));
         } catch (IllegalArgumentException e) {
@@ -237,6 +299,31 @@ public class InventoryCheckController {
         }
 
         InventoryCheck saved = inventoryCheckRepository.save(check);
+
+        if (!oldStatusStr.equals(newStatus)) {
+            ApprovalHistory history = ApprovalHistory.builder()
+                    .inventoryCheck(saved)
+                    .documentType(Status.DocumentType.INVENTORY_CHECK)
+                    .oldStatus(oldStatusStr)
+                    .newStatus(newStatus)
+                    .note(body.getOrDefault("remark", "Status updated to " + newStatus))
+                    .approver(user)
+                    .build();
+            approvalHistoryRepository.save(history);
+
+            if ("COMPLETED".equals(newStatus) && saved.getAssignedUser() != null) {
+                NotificationEventDTO event = NotificationEventDTO.builder()
+                        .id(java.util.UUID.randomUUID().toString())
+                        .userId(saved.getAssignedUser().getId().toString())
+                        .title("Inventory Check Completed")
+                        .message("Inventory check #" + saved.getId() + " was completed and closed by Manager " + user.getUsername())
+                        .type("SUCCESS")
+                        .createdAt(java.time.Instant.now().toString())
+                        .build();
+                eventPublisher.publishEvent(event);
+            }
+        }
+
         return ResponseEntity.ok(InventoryCheckDTO.fromEntity(saved));
     }
 
